added style and updated html by adding logo

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firelands Most Wanted Criminals</title>
+    <title>Firelands Most Wanted</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Firelands Most Wanted</h1>
+        <div class="header-content">
+            <h1>FIRELAND'S MOST WANTED FUGITIVES</h1>
+            <img src="images/logo.png" alt="Logo" class="logo">
+        </div>
         <input type="text" id="search" placeholder="Search criminals...">
     </header>
-
+    
     <main>
         <div id="criminals-container"></div>
     </main>
