--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,11 +9,15 @@
     <header>
         <div class="header-content">
             <h1>FIRELAND'S MOST WANTED FUGITIVES</h1>
-            <img src="images/logo.png" alt="Logo" class="logo">
+            <img src="images/logo.jpg" alt="Logo" class="logo">
         </div>
         <input type="text" id="search" placeholder="Search criminals...">
     </header>
-    
+
+     <div class="alert-container">
+        <button class="alert-button">Welcome</button>
+    </div>
+
     <main>
         <div id="criminals-container"></div>
     </main>
@@ -22,3 +25,4 @@
     <script src="js/index.js"></script>
 </body>
 </html>
+
