--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div id="criminals-container"></div>
 
         <form id="add-fugitive-form">
-            <input type="text" id="fugitive-name-input" placeholder="Fugitive Name" required>
-            <input type="text" id="fugitive-image-input" placeholder="Image URL" required>
-            <input type="text" id="fugitive-description-input" placeholder="Description" required>
+            <input type="text" id="fugitive-name-input" placeholder="Fugitive Name..." required>
+            <input type="text" id="fugitive-image-input" placeholder="Image URL..." required>
+            <input type="text" id="fugitive-description-input" placeholder="Commited Crime..." required>
             <button type="submit">Add Fugitive</button>
         </form>
         
