updated the view more button

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         <button class="alert-button">Welcome</button>
     </div>
 
-    <div id="details-container" class="hidden">
-        <h2 id="fugitive-name"></h2>
-        <img id="fugitive-image" src="" alt="Fugitive Image">
-        <p id="fugitive-description"></p>
-        <button id="close-details">Close</button>
-    </div>
+    <section id="details-section">
+        <div id="details-container" style="display: none;">
+            <h2 id="fugitive-name"></h2>
+            <img id="fugitive-image" src="" alt="Fugitive Image">
+            <p id="fugitive-description"></p>
+            <button id="close-details">Close</button>
+        </div>
+    </section>    
     
     <main>
         <div id="criminals-container"></div>
