--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <h1>FIRELAND'S MOST WANTED FUGITIVES</h1>
-            <img src="images/logo.jpg" alt="Logo" class="logo">
-        </div>
-        <input type="text" id="search" placeholder="Search criminals...">
+        <h1>Firelands Most Wanted</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#criminals-container">Fugitives</a></li>
+                <li><a href="#add-fugitive-form">Add Fugitive</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+    
 
     <div class="alert-container">
         <button class="alert-button">Welcome</button>
